RESOLVED FIXED148662
[ES6] Tail call fast path should efficiently reuse the frame's stack space
https://bugs.webkit.org/show_bug.cgi?id=148662
Summary [ES6] Tail call fast path should efficiently reuse the frame's stack space
Basile Clement
Reported 2015-08-31 17:51:29 PDT
...
Attachments
Patch (122.12 KB, patch)
2015-09-04 15:00 PDT, Basile Clement
no flags
Rebased patch (122.93 KB, patch)
2015-09-16 18:06 PDT, Michael Saboff
no flags
Patch with fix for 32 bit debug build (122.95 KB, patch)
2015-09-16 20:35 PDT, Michael Saboff
no flags
Patch with speculative build fixes (125.78 KB, patch)
2015-09-16 22:31 PDT, Michael Saboff
ggaren: review+
Patch for Landing (and EWS testing) (133.07 KB, patch)
2015-09-18 15:51 PDT, Michael Saboff
no flags
Basile Clement
Comment 1 2015-09-04 15:00:28 PDT
Michael Saboff
Comment 2 2015-09-16 18:06:45 PDT
Created attachment 261344 [details] Rebased patch
WebKit Commit Bot
Comment 3 2015-09-16 18:09:47 PDT
Attachment 261344 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.cpp:42: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:604: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:627: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:648: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 4 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Saboff
Comment 4 2015-09-16 20:35:49 PDT
Created attachment 261360 [details] Patch with fix for 32 bit debug build
WebKit Commit Bot
Comment 5 2015-09-16 20:38:06 PDT
Attachment 261360 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.cpp:42: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:604: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:627: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:648: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 4 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Saboff
Comment 6 2015-09-16 22:31:28 PDT
Created attachment 261368 [details] Patch with speculative build fixes
WebKit Commit Bot
Comment 7 2015-09-16 22:33:04 PDT
Attachment 261368 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.cpp:42: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:604: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:627: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:648: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 4 in 20 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 8 2015-09-18 11:13:29 PDT
Comment on attachment 261368 [details] Patch with speculative build fixes View in context: https://bugs.webkit.org/attachment.cgi?id=261368&action=review r=me > Source/JavaScriptCore/jit/CallFrameShuffler.h:45 > +class CachedRecovery { Please move this class to its own file.
Michael Saboff
Comment 9 2015-09-18 15:51:25 PDT
Created attachment 261533 [details] Patch for Landing (and EWS testing)
WebKit Commit Bot
Comment 10 2015-09-18 15:53:11 PDT
Attachment 261533 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/jit/CachedRecovery.cpp:34: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.cpp:31: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.cpp:43: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:507: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:530: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/jit/CallFrameShuffler.h:551: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 6 in 22 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Saboff
Comment 11 2015-09-18 16:51:54 PDT
Note You need to log in before you can comment on or make changes to this bug.